--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "bootstrap": "^5.2.3",
     "jspdf": "^2.5.1",
     "ngx-pagination": "^6.0.3",
+    "ngx-toastr": "^16.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
